z-index fix

--- a/src/stylesheets/askquestion.css
+++ b/src/stylesheets/askquestion.css
@@ -1,8 +1,8 @@
 .askquestion-main,
 .askquestion-h1 {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 3rem auto;
-  width: 70%;
+  width: 75%;
 }
 
 .askquestion-h1 {
